# stpd

./: .gitignore  Cargo.toml  README.md  figs.ipe
evals/: data  data5  data520  mini-space.txt  plot-samples.py
src/: jump_index.rs  lcp.rs  lib.rs  main.rs  rmq.rs  stpd.rs  strings.rs  test.rs
src/jump_index/: link.rs  storage.rs  stpd.rs
