[package]
name = "text-indexing"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
copse = { version = "0.4.1", git = "https://github.com/kmdreko/copse", branch = "fix/is-sorted-ambiguity"}
env_logger = "0.11.9"
itertools = "0.14.0"
log = "0.4.29"
packed-seq = "3.2.1"
rand = "0.9.1"
simd-minimizers = "1.1.0"
