[package]
name = "text-indexing"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
bincode = "1.3"
copse = { version = "0.4.1", git = "https://github.com/kmdreko/copse", branch = "fix/is-sorted-ambiguity"}
env_logger = "0.11.9"
itertools = "0.14.0"
libsais = "0.2.0"
log = "0.4.29"
mem_dbg = "0.4.2"
needletail = "0.6.3"
packed-seq = "3.2.1"
ragc-core = "0.1.1"
rand = "0.9.1"
rayon = "1.12.0"
serde = { version = "1.0", features = ["derive"] }
simd-minimizers = "1.1.0"
sux = { version = "0.14.0", features = ["serde"] }
tiered-vector = "1.0.1"
voracious_radix_sort = { version = "1.2.0", features = ["voracious_multithread"] }
